Fix issue where book form was sttretching out as 'book cards' expanded the height of grid. Set a fixed height to the book-library section so it won't completely collapse when empty

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 
 .body {
     grid-template-rows: 1fr 1fr;
+    align-items: start;
 }
 
 .title,
@@ -62,6 +63,7 @@ body {
     gap: 15px;
     grid-template-columns: repeat(auto-fill, minmax(20rem,1fr));
     padding: 15px;
+    min-height: 22.5rem;
 }
 
 .book {
